--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: List repository files
+        run: ls -la $GITHUB_WORKSPACE
+        
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
