--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Install dependencies + pytest-html
         run: |
           python -m pip install --upgrade pip
+          cd $GITHUB_WORKSPACE/dab_project
           pip install -r requirements-pyspark.txt
 
       - name: Run pytest & generate HTML report
