--- a/dab_project/requirements-pyspark.txt
+++ b/dab_project/requirements-pyspark.txt
@@ -3,9 +3,9 @@ googleapis-common-protos==1.63.2
 grpcio==1.60.0
 grpcio-status==1.60.0
 iniconfig==2.1.0
-numpy==1.23.5
+numpy
 packaging==25.0
-pandas==1.5.3
+pandas
 pluggy==1.5.0
 protobuf==5.29.4
 py4j==0.10.9.7
