--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -27,7 +27,7 @@ jobs:
           python -m pip install --upgrade pip
           cd $GITHUB_WORKSPACE/dab_project
           pip install -r requirements-pyspark.txt
-          python .\setup.py bdist_wheel  
+          python setup.py bdist_wheel  
           pip install .\dist\dab_project-0.0.1-py3-none-any.whl
 
       - name: Run pytest & generate HTML report
