ci workflow updated6

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -29,7 +29,7 @@ jobs:
           pip install -r requirements-pyspark.txt
           python setup.py bdist_wheel  
           ls -la $GITHUB_WORKSPACE/dab_project/dist
-          pip install .\dist\dab_project-0.0.1-py3-none-any.whl
+          pip install ./dist/dab_project-0.0.1-py3-none-any.whl
 
       - name: Run pytest & generate HTML report
         run: |
